--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/gl.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <canvas></canvas>
+    <canvas id="glCanvas" width="640" height="480"></canvas>
 </body>
 </html>
